# oracle

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  joyride-oracle.service  railway.json
.github/workflows/: ci.yml  deploy.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  pyth.rs  twap_calculator.rs  types.rs
crates/types/: Cargo.toml
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
src/: lib.rs  main.rs  pyth.rs  server.rs  twap.rs  twap_calculator.rs  types.rs
