# Cargo.toml - Oracle service for Joyride exchange
#
# This service provides price data from Pyth Network for:
# - Real-time spot prices (for risk engine consumption)
# - TWAP calculation for settlement pricing
#
# Phase 0: Pyth Hermes (HTTP/SSE streaming)
# Phase 1+: Pyth Pro (lower latency)

[workspace]
members = [".", "crates/core", "crates/types"]
resolver = "2"

[package]
name = "joyride-oracle"
version = "0.1.0"
edition = "2021"
description = "Price oracle service using Pyth Network"
license = "MIT"
repository = "https://github.com/joyride-exchange/oracle"

[dependencies]
joyride-oracle-core = { path = "crates/core", version = "0.1.0" }
# Wire-format types (re-exported at the crate root for consumers).
# `version` is required so the crate is publishable: when published, Cargo
# drops the `path` and resolves the dep from the registry.
joyride-oracle-types = { path = "crates/types", version = "0.1.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"

# Async utilities
futures-util = "0.3"

# WebSocket server
tokio-tungstenite = "0.24"
socket2 = "0.5"

