# Cargo.toml - Oracle service for Joyride exchange
#
# This service provides price data from Pyth Network for:
# - Real-time spot prices (for risk engine consumption)
# - TWAP calculation for settlement pricing
#
# Phase 0: Pyth Hermes (HTTP/SSE streaming)
# Phase 1+: Pyth Pro (lower latency)

[workspace]
members = [".", "crates/core", "crates/wire"]
resolver = "2"

[package]
name = "joyride-oracle"
version = "0.1.0"
edition = "2021"
description = "Price oracle service using Pyth Network"
license = "MIT"
repository = "https://github.com/joyride-exchange/oracle"
homepage = "https://joyride.exchange"
# Deploy this crate from source (git checkout + cargo build). The
# embeddable pieces (`joyride-oracle-core`) and the wire contract
# (`joyride-oracle-wire`) are the published artifacts; the service
# binary itself is not distributed via crates.io.
publish = false

[dependencies]
joyride-oracle-core = { path = "crates/core" }
joyride-oracle-wire = { path = "crates/wire" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"

# Async utilities
futures-util = "0.3"

# WebSocket server
tokio-tungstenite = "0.24"
socket2 = "0.5"
