[package]
name = "joyride-oracle-core"
version = "0.1.0"
edition = "2021"
description = "Core in-process domain logic for the Joyride Oracle"
license = "MIT"
repository = "https://github.com/joyride-exchange/oracle"
homepage = "https://joyride.exchange"
readme = "../../README.md"
keywords = ["oracle", "twap", "options", "pricing", "pyth"]
categories = ["finance", "api-bindings"]

[dependencies]
joyride-oracle-types = { path = "../types", version = "0.1.0" }

tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
eventsource-client = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
tracing = "0.1"
