[package]
name = "joyride-oracle-types"
version = "0.1.0"
edition = "2021"
description = "Wire-format types for the Joyride Oracle broadcast feed"
license = "MIT"
repository = "https://github.com/joyride-exchange/oracle"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
